--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <script src="sweetalert2.min.js"></script>
     <link rel="stylesheet" href="sweetalert2.min.css">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyA-uAsEDeO66A0K0gMQ_T--ILbTI2aXws0"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravHelper - Simplify your trip planning process.</title>
   </head>
